<resources>
    <string name="app_name">Race Timer</string>

    <string name="finish_time_string">Finish time</string>
    <string name="start_time_string">Start time</string>
    <string name="race_time_string">Race time</string>
    <string name="dns_text">DNS</string>
    <string name="dnf_text">DNF</string>
    <string name="results_string">Results</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="show_timer">Show Timer</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="race_settings">Race Settings</string>
    <string name="start_open">Start Open</string>
    <string name="start_close">Start Close</string>
    <string name="finish_close">Finish Close</string>
    <string name="app_settings">App Settings</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="enter_start_number">Enter start number</string>
    <string name="start_number">Start number</string>


</resources>