<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/start_number"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_timer_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="100dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_timer_two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="240dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_timer_two"
            app:layout_constraintStart_toEndOf="@id/guideline_timer_one"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/participant_start_time_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/start_time_string"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/guideline_timer_two"
            app:layout_constraintStart_toEndOf="@id/guideline_timer_one"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/participant_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_timer_two"
            app:layout_constraintStart_toEndOf="@id/guideline_timer_one"
            app:layout_constraintTop_toBottomOf="@id/participant_start_time_hint"
            tools:text="00:00:00" />

        <TextView
            android:id="@+id/dns_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dns_text"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_timer_two"
            app:layout_constraintStart_toEndOf="@id/guideline_timer_one"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:visibility="gone"
            android:backgroundTint="@color/finish_button_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_timer_two"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/participant_finish_time_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/finish_time_string"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_timer_two"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/participant_finish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_timer_two"
            app:layout_constraintTop_toBottomOf="@id/participant_start_time_hint"
            tools:text="00:00:00" />

        <TextView
            android:id="@+id/dnf_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnf_text"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_timer_two"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>