<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/timer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/_00_00_00"
        app:subtitleTextColor="@color/design_default_color_on_primary"
        app:title="Race Timer"
        app:titleMarginStart="100dp"
        app:titleTextColor="@color/design_default_color_on_primary" />


    <Button
        android:id="@+id/go_to_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/results_string"
        app:layout_constraintBottom_toBottomOf="@id/timer_toolbar"
        app:layout_constraintEnd_toEndOf="@id/timer_toolbar"
        app:layout_constraintTop_toTopOf="@id/timer_toolbar" />

    <ImageButton
        android:id="@+id/delete_all_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:layout_constraintStart_toStartOf="@id/timer_toolbar"
        app:layout_constraintTop_toBottomOf="@id/timer_toolbar"
        app:layout_constraintTop_toTopOf="@id/timer_toolbar"
        app:tint="@color/red" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/timer_toolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        app:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@color/design_default_color_on_primary" />


</androidx.constraintlayout.widget.ConstraintLayout>