<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/position"
            android:layout_width="45dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="40sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00" />

        <TextView
            android:id="@id/start_number"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_result_one"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_result_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="50dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_result_two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_result_three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="296dp" />

        <TextView
            android:id="@+id/result_start_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:text="@string/start_time_string"
            app:layout_constraintStart_toEndOf="@id/guideline_result_two"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/result_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/result_barrier"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00:00" />

        <TextView
            android:id="@+id/result_dns_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dns_text"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_result_three"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/result_finish_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="@string/finish_time_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_result_two" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/result_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="result_finish_time_text, result_start_time_text"
            app:layout_constraintEnd_toEndOf="@id/result_finish_time_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_finish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/result_barrier"
            tools:text="00:00:00" />

        <TextView
            android:id="@+id/result_dnf_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnf_text"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_result_three"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/race_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/race_time_string"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_result_three"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/race_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_result_three"
            tools:text="00:00:00" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>